--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,14 +1,16 @@
 @import "tailwindcss";
 
 @theme {
-  /* Primary Colors */
-  --color-primary-50: #E6F2F2;
-  --color-primary-100: #B0D8D8;
-  --color-primary-200: #66B2B2;
-  --color-primary-300: #008080;
-  --color-primary-400: #007373;
-  --color-primary-500: #006666;
-  --color-primary: #008080;
+  /* Primary Colors - Professional Sky Blue */
+  --color-primary-50: #F0F9FF;
+  --color-primary-100: #E0F2FE;
+  --color-primary-200: #BAE6FD;
+  --color-primary-300: #7DD3FC;
+  --color-primary-400: #38BDF8;
+  --color-primary-500: #0EA5E9;
+  --color-primary-600: #0284C7;
+  --color-primary-700: #0369A1;
+  --color-primary: #0284C7;
 
   /* Neutral Colors */
   --color-neutral-100: #F5F5F5;
